# warhorse

./: .gitignore  Cargo.toml  README.md  package-lock.json
test/: Cargo.toml
warhorse_app/: Cargo.toml  Dioxus.toml  package-lock.json
warhorse_app/assets/: main.css
warhorse_app/src/: App.css  App.tsx  main.rs  warhorse.rs
warhorse_app/src-tauri/: Cargo.toml
warhorse_app/src-tauri/src/: lib.rs  main.rs
warhorse_app/src/components/: Chat.tsx  Friend.tsx  Modal.tsx
warhorse_app_old/: package.json
warhorse_app_old/src/: App.css
warhorse_app_old/src-tauri/: Cargo.toml  tauri.conf.json
warhorse_app_old/src-tauri/src/: utils.rs
warhorse_app_old/src/components/: Button.tsx  Chat.tsx  ChatMessage.tsx  FriendList.tsx
warhorse_client/: Cargo.toml
warhorse_client/examples/: bevy.rs  friends_list.rs
warhorse_client/examples/ui/: mod.rs  tabs.rs
warhorse_client/examples/warhorse/: mod.rs
warhorse_client/examples/warhorse/ui/: friends.rs  mod.rs
warhorse_client/src/: error.rs  lib.rs
warhorse_cpp/: Cargo.toml  build.rs  cbindgen.toml
warhorse_cpp/src/: lib.rs
warhorse_cpp_client/: CMakeLists.txt  RustCppIntegration.sln
warhorse_cpp_client/src/: client.cpp  client.h  rust_interface.h
warhorse_cpp_client/src/include/: bindings.h
warhorse_experimentation/: Cargo.toml  Dioxus.toml
warhorse_experimentation/assets/: main.css
warhorse_experimentation/src/: main.rs
warhorse_overlay/: Cargo.toml  Dioxus.toml  tailwind.config.js
warhorse_overlay/assets/: main.css  tailwind.css
warhorse_overlay/src/: main.rs
warhorse_overlay/src/ui/: components.rs  mod.rs  signals.rs
warhorse_protocol/: Cargo.toml  build.rs
warhorse_protocol/proto/: online_service.proto
warhorse_protocol/src/: error.rs  lib.rs
warhorse_server/: Cargo.toml
warhorse_server/src/: config.rs  data_access.rs  data_service.rs  error.rs  i18n.rs  main.rs  server.rs  utils.rs
warhorse_server/src/database/: db_in_memory.rs  db_postgres.rs  mod.rs
warhorse_ui/: Cargo.toml
warhorse_ui/src/: lib.rs
warhorse_ui/src/schema/: parse.rs
warhorse_ui_experiments/: Cargo.toml  build.rs
warhorse_ui_experiments/assets/: test.wh
warhorse_ui_experiments/src/: main.rs
warhorse_ui_experiments/src/ui/: friends.rs  mod.rs
