[workspace]
members=["warhorse_client", "warhorse_protocol", "warhorse_server"]
resolver = "2"

[workspace.dependencies]
serde = "1.0.134"
serde_json = "1.0.134"
tokio = "1.42.0"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tonic = "0.12.3"
tonic-build = "0.12.3"
prost = "0.13.4"
chrono = "0.4.19"