[workspace]
members=["warhorse_client", "warhorse_cpp", "warhorse_protocol", "warhorse_server", "warhorse_app", "warhorse_experimentation"]
resolver = "2"

[workspace.dependencies]
serde = "1.0.134"
serde_json = "1.0.134"
tokio = "1.42.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
