[package]
name = "warhorse_app"
version = "0.1.0"
authors = ["BrianWiz <brian.howard@hey.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warhorse_client = { path = "../warhorse_client" }
dioxus = { version = "0.6.1", features = ["desktop"]}
tokio = {version = "1.42.0", features = ["rt-multi-thread"]}
chrono = { version = "0.4.39"}
