[package]
name = "warhorse_client"
version = "0.1.0"
edition = "2021"

[dependencies]
horse_protocol = { path = "../warhorse_protocol" }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"]}
rust_socketio = "0.6.0"

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
