[package]
name = "warhorse_client"
version = "0.1.0"
edition = "2021"

[dependencies]
warhorse_protocol = { path = "../warhorse_protocol" }

rust_socketio = "0.6.0"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = "0.4.22"


[dev-dependencies]
ctrlc = "3.4.5"
clap = {  version = "4.5.23", features = ["derive"] }
bevy = {  version = "0.15.0", features = ["ghost_nodes"] }
ron = "0.8.1"
actuate = {  version = "0.20.1", features = ["material", "rt"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }