[package]
name = "warhorse_experimentation"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = "0.12.3"
tao = "0.31.0"
dioxus = { version = "0.6.1", features = ["desktop"]}
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
