[package]
name = "warhorse_ui_experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
warhorse_ui = { path = "../warhorse_ui" }
warhorse_protocol = { path = "../warhorse_protocol" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8.1"
bevy = "0.15.0"
bevy_egui = "0.31.1"

[build-dependencies]
warhorse_ui = { path = "../warhorse_ui" }
