[package]
name = "warhorse_app_old"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "warhorse_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
warhorse_client = { path = "../../warhorse_client" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.0", features = ["full"] }

